Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27787

mariadb-backup --backup is allocating extra memory for log records

    XMLWordPrintable

Details

    Description

      In MDEV-14425, the log parsing in mariadb-backup --backup was rewritten. The parameter STORE_IF_EXISTS that is being passed to recv_sys.parse_mtr() or recv_sys.parse_pmem() instead of STORE_NO causes additional memory to be allocated for redo log records. This was noticed by a SAFE_MUTEX assertion for buf_pool.mutex:

      #4  0x000055c9fc87921d in buf_LRU_get_free_block (have_mutex=false) at /data/Server/bb-10.8-MDEV-27774/storage/innobase/buf/buf0lru.cc:402
      #5  0x000055c9fc7fc45b in buf_block_alloc () at /data/Server/bb-10.8-MDEV-27774/storage/innobase/include/buf0buf.inl:93
      #6  0x000055c9fcbb1b9b in recv_sys_t::alloc (this=0x55c9fee36fe0 <recv_sys>, len=35) at /data/Server/bb-10.8-MDEV-27774/storage/innobase/log/log0recv.cc:1396
      #7  0x000055c9fcbb379c in recv_sys_t::add (this=0x55c9fee36fe0 <recv_sys>, Python Exception <class 'AttributeError'> 'NoneType' object has no attribute 'pointer': 
      it=..., start_lsn=17240206, lsn=17260854, l=0x7fa5600bf08e "'", len=8) at /data/Server/bb-10.8-MDEV-27774/storage/innobase/log/log0recv.cc:1970
      #8  0x000055c9fcbbc9b7 in recv_sys_t::parse<recv_buf> (this=0x55c9fee36fe0 <recv_sys>, store=STORE_IF_EXISTS, l=...) at /data/Server/bb-10.8-MDEV-27774/storage/innobase/log/log0recv.cc:2632
      #9  0x000055c9fcb974cd in recv_sys_t::parse_mtr (store=STORE_IF_EXISTS) at /data/Server/bb-10.8-MDEV-27774/storage/innobase/log/log0recv.cc:2776
      #10 0x000055c9fb34d56b in xtrabackup_copy_logfile () at /data/Server/bb-10.8-MDEV-27774/extra/mariabackup/xtrabackup.cc:3111
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.