MDEV-27787 mariadb-backup --backup is allocating extra memory for log records

In commit 685d958e38b825ad9829be311f26729cccf37c46 (MDEV-14425),
the log parsing in mariadb-backup --backup was rewritten.
The parameter STORE_IF_EXISTS that is being passed to recv_sys.parse_mtr()
or recv_sys.parse_pmem() instead of STORE_NO caused unnecessary additional
memory allocation for redo log records.